--- a/DinnerWithFriends/Main.storyboard
+++ b/DinnerWithFriends/Main.storyboard
@@ -17,14 +17,14 @@
         <!--Dinneritem List-->
         <scene sceneID="3UM-bu-yw5">
             <objects>
-                <tableViewController title="Dinneritem List" id="6cl-eR-wXG" customClass="DinnerItemTableViewController" customModule="DinnerWithFriends5_0" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Dinneritem List" id="6cl-eR-wXG" customClass="DinnerItemTableViewController" customModule="DinnerWithFriends" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="xqL-WL-jdN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="separatorColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="dinnerItemCell" rowHeight="100" id="5ZT-Bh-wrD" customClass="DinnerItemTableViewCell" customModule="DinnerWithFriends5_0" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="dinnerItemCell" rowHeight="100" id="5ZT-Bh-wrD" customClass="DinnerItemTableViewCell" customModule="DinnerWithFriends" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5ZT-Bh-wrD" id="il8-9W-OiA">
@@ -112,7 +112,7 @@
         <!--Dinner Item Detail View Controller-->
         <scene sceneID="Ggj-kd-Suq">
             <objects>
-                <viewController id="41i-NK-yiy" customClass="DinnerItemDetailViewController" customModule="DinnerWithFriends5_0" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="41i-NK-yiy" customClass="DinnerItemDetailViewController" customModule="DinnerWithFriends" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Nzo-WG-VvG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -120,7 +120,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oPR-mD-QU2" userLabel="wrapperViewCategoryBar">
                                 <rect key="frame" x="0.0" y="64" width="375" height="50"/>
                                 <subviews>
-                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Kuw-Ds-SBo" userLabel="categorySelectionCollectionView" customClass="DinnerDetailCategoryCollectionView" customModule="DinnerWithFriends5_0" customModuleProvider="target">
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Kuw-Ds-SBo" userLabel="categorySelectionCollectionView" customClass="DinnerDetailCategoryCollectionView" customModule="DinnerWithFriends" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                         <color key="backgroundColor" red="0.99629861119999996" green="0.57077127699999997" blue="0.52341043949999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="eZn-9W-2CO">
@@ -130,7 +130,7 @@
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="categorySelectionCell" id="ESn-om-YP0" customClass="MenuBarCollectionViewCell" customModule="DinnerWithFriends5_0" customModuleProvider="target">
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="categorySelectionCell" id="ESn-om-YP0" customClass="MenuBarCollectionViewCell" customModule="DinnerWithFriends" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -459,7 +459,7 @@
         <!--Create Dinner-->
         <scene sceneID="mna-iO-dbS">
             <objects>
-                <viewController id="h5g-dH-EDL" customClass="DinnerCreatorViewController" customModule="DinnerWithFriends5_0" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="h5g-dH-EDL" customClass="DinnerCreatorViewController" customModule="DinnerWithFriends" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="MoO-bA-dMn">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -471,10 +471,10 @@
                                     <constraint firstAttribute="height" constant="83" id="54W-iu-xws"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="stock-photo-group-of-friends-making-toast-around-table-at-dinner-party-165815270" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b1O-8i-0I0" userLabel="background Picture">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="friendsDinner1" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b1O-8i-0I0" userLabel="background Picture">
                                 <rect key="frame" x="0.0" y="197" width="375" height="421"/>
                             </imageView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="E1M-dK-FVv" customClass="CreateDinnerCollectionView" customModule="DinnerWithFriends5_0" customModuleProvider="target">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="E1M-dK-FVv" customClass="CreateDinnerCollectionView" customModule="DinnerWithFriends" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="64" width="375" height="50"/>
                                 <color key="backgroundColor" red="0.99150234460830688" green="0.63008177280426025" blue="0.5882372260093689" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -487,7 +487,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="menuCell" id="ZqC-32-vYr" customClass="MenuBarCollectionViewCell" customModule="DinnerWithFriends5_0" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="menuCell" id="ZqC-32-vYr" customClass="MenuBarCollectionViewCell" customModule="DinnerWithFriends" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -522,7 +522,7 @@
                                     <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="dinnerItemsCollectionViewCell" id="Tdy-n2-Jal" customClass="DinnerItemCollectionViewCell" customModule="DinnerWithFriends5_0" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="dinnerItemsCollectionViewCell" id="Tdy-n2-Jal" customClass="DinnerItemCollectionViewCell" customModule="DinnerWithFriends" customModuleProvider="target">
                                         <rect key="frame" x="18" y="16.5" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -579,7 +579,7 @@
                                     <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="dinnerCollectionViewCell" id="xaN-sg-slh" userLabel="dinnerCollectionViewCell" customClass="DinnerCollectionViewCell" customModule="DinnerWithFriends5_0" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="dinnerCollectionViewCell" id="xaN-sg-slh" userLabel="dinnerCollectionViewCell" customClass="DinnerCollectionViewCell" customModule="DinnerWithFriends" customModuleProvider="target">
                                         <rect key="frame" x="10" y="10" width="90" height="90"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -733,7 +733,7 @@
     </scenes>
     <resources>
         <image name="DinnerIcon-1" width="48" height="48"/>
-        <image name="stock-photo-group-of-friends-making-toast-around-table-at-dinner-party-165815270" width="750" height="550"/>
+        <image name="friendsDinner1" width="375" height="222"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Kpa-fG-EBw"/>
