--- a/DinnerWithFriends/Main.storyboard
+++ b/DinnerWithFriends/Main.storyboard
@@ -700,6 +700,7 @@
                     <connections>
                         <segue destination="bu6-Jl-0mU" kind="relationship" relationship="viewControllers" id="ylu-SZ-fxm"/>
                         <segue destination="hQc-1N-Ne8" kind="relationship" relationship="viewControllers" id="g6z-OB-RFY"/>
+                        <segue destination="Q4o-N0-WDh" kind="relationship" relationship="viewControllers" id="LGh-cu-Byp"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nc5-8O-Jkf" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -729,6 +730,61 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vc0-MQ-pMv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-224" y="789.80509745127438"/>
+        </scene>
+        <!--Back Ground Pictures Collection View Controller-->
+        <scene sceneID="vgZ-Dy-xyk">
+            <objects>
+                <collectionViewController id="LxG-Fd-X1o" customClass="BackGroundPicturesCollectionViewController" customModule="DinnerWithFriends" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="dVV-5i-UlK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="U8g-zu-7dy">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="czK-lO-0HK">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="LxG-Fd-X1o" id="g1Y-gy-pFN"/>
+                            <outlet property="delegate" destination="LxG-Fd-X1o" id="DCQ-Xu-xbE"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="eDW-5y-Cfx"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q4t-N2-47l" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-201" y="1513"/>
+        </scene>
+        <!--Background Pictures-->
+        <scene sceneID="QpE-Lo-flh">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Q4o-N0-WDh" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Background Pictures" id="2UC-7F-5hP"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="9ZG-fo-eYL">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.99629861119999996" green="0.57077127699999997" blue="0.52341043949999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="LxG-Fd-X1o" kind="relationship" relationship="rootViewController" id="kV9-Ns-LqE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="voc-dH-dLV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-967" y="1513"/>
         </scene>
     </scenes>
     <resources>
