--- a/DinnerWithFriends/Main.storyboard
+++ b/DinnerWithFriends/Main.storyboard
@@ -735,7 +735,7 @@
         <scene sceneID="vgZ-Dy-xyk">
             <objects>
                 <collectionViewController id="LxG-Fd-X1o" customClass="BackGroundPicturesCollectionViewController" customModule="DinnerWithFriends" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="dVV-5i-UlK">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" semanticContentAttribute="spatial" dataMode="prototypes" id="dVV-5i-UlK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
